# energy

./: .gitignore  .gitignore_STANDARD_TEMPLATE  ALL_REPOSITORY_CHANGES_COMPLETE.md  ARTIFICIAL_GRAVITY_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION_COMPLETION_SUMMARY.md  CRITICAL_UQ_RESOLUTION_STRATEGY.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DESCRIPTION.md  ENHANCED_COSMOLOGICAL_CONSTANT_LEVERAGING_SUMMARY.md  EXPERIMENTAL_VALIDATION_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FTL-HULL-DESIGN-UQ-RESOLUTION-SUMMARY.md  GRAVITATIONAL_CONTROLLER_DOCUMENTATION_UPDATE_SUMMARY.md  GRAVITON_PROPAGATOR_IMPLEMENTATION_SUMMARY.md  GRAVITON_QFT_BREAKTHROUGH_SUMMARY.md  README.md  README_TEMPLATE.md  RELEASE_NOTES.md  SYNC_REPORT.md  UQ-CREW-OPTIMIZATION-PREREQUISITES.ndjson  UQ-CRITICAL-ASSESSMENT-FTL-HULL.md  UQ-ENHANCED-RESOLUTIONS.ndjson  UQ-TODO-EXPERIMENTAL-VALIDATION.ndjson  UQ-TODO-FTL-HULL-CRITICAL.ndjson  UQ-TODO-GRAVITON-PROPAGATOR.ndjson  UQ-TODO-HULL-DESIGN-IMPLEMENTED.ndjson  UQ-TODO-NEXT-PHASE.ndjson  UQ-TODO-RESOLVED-CONSOLIDATED.ndjson  UQ-TODO-RESOLVED-CREW-VESSEL-PREREQUISITES.ndjson  UQ-TODO-RESOLVED-CRITICAL.ndjson  UQ-TODO-RESOLVED.ndjson  UQ-TODO-RESOLVED.ndjson.backup  UQ-TODO-updated.ndjson  UQ-TODO.ndjson  UQ_REQUIREMENTS_SATISFACTION_REPORT.md  UQ_RESOLUTION_COMPLETE.md  VnV-TODO.ndson  artificial_gravity_uq_resolution_results.json  (+94 more)
analysis/: README.md  analyze_ndjson_duplicates.py  analyze_subspace_range.py  cross_repository_computational_load_resolution.py  enhanced_electromagnetic_analyzer.py  materials_engineering_solution.py  nanoscale_statistical_validator.py  realistic_subspace_analysis.py  replicator_energy_framework_integration.py  replicator_energy_integration_report.json  scale_up_feasibility_analysis.py  stress_energy_tensor_coupling.py  uq_resolution_validation_report.json  volume_quantization_controller.py
comprehensive_uq_assessment/: comprehensive_uq_assessment.json
docs/: CHANGELOG.md  SU2-TODO.md  (+41 more)
(+94 files in other folders)
