[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-framework"
version = "2.1.0"
description = "Energy Framework"
authors = [
  { name = "Arcticoder" }
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.8"
keywords = [
  "quantum-gravity", "energy-enhancement", "dynamic-backreaction", 
  "adaptive-systems", "field-manipulation", "spacetime-geometry"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  # Add your core dependencies here
]

[project.urls]
Documentation = "https://github.com/energy-framework/energy/docs"
"Bug Reports" = "https://github.com/energy-framework/energy/issues"
Source = "https://github.com/energy-framework/energy"

[project.scripts]
energy-framework = "src.core.cli:main"
dynamic-backreaction = "src.core.dynamic_backreaction:main"

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.0", "black>=21.0"]
test = ["pytest>=6.0", "pytest-cov>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["energy_framework*", "core*"]